rearranged sidebar implementing multiple authors
- added authors at bottom of sidebar
- added dkunnath
- added tags/categories views of the posts
- added author info to the bottom of the posts

--- a/src/components/Post/AuthorFooter/AuthorFooter.module.scss
+++ b/src/components/Post/AuthorFooter/AuthorFooter.module.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/scss/variables';
 @import '../../../assets/scss/mixins';
 
-.author {
+.authorfooter {
   border-top: 1px solid $color-gray-border;
   max-width: $layout-post-width;
   padding-top: 20px;
@@ -9,18 +9,21 @@
   @include margin-top(1);
   @include margin-bottom(2);
 
-  &__bio {
-    &-twitter {
-      display: block;
-      text-decoration: underline;
-    }
+  &__author {
+    display: block;
+    float: left;
+    text-decoration: underline;
+  }
+  &__contact {
+    display: block;
+    float: right;
+    text-decoration: underline;
   }
 }
 
 @include breakpoint-sm {
-  .author {
+  .authorfooter {
     margin-left: auto;
     margin-right: auto;
   }
-
 }
