--- a/src/components/Sidebar/AuthorSidebar/AuthorSidebar.module.scss
+++ b/src/components/Sidebar/AuthorSidebar/AuthorSidebar.module.scss
@@ -1,7 +1,7 @@
 @import '../../../assets/scss/variables';
 @import '../../../assets/scss/mixins';
 
-.menu {
+.authorsidebar {
   &__list {
     list-style: none;
     padding: 0px 0px 0px 8px;
