--- a/src/components/Post/AuthorFooter/Author/Author.module.scss
+++ b/src/components/Post/AuthorFooter/Author/Author.module.scss
@@ -2,42 +2,39 @@
 @import '../../../../assets/scss/mixins';
 
 .author {
-  &__avatar {
-    float: left;
-    @include margin(0.5, 0, 0.5, 0);
-  }
+  display: inline-flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 
-  &__identity {
-    float: left;
-    @include margin(0, 0.5, 0, 0.5);
-  }
-
-  &__photo {
-    display: inline-block;
-    margin-bottom: 0;
-    border-radius: 50%;
-    background-clip: padding-box;
-  }
-
-  &__title {
-    font-size: $typographic-base-font-size * 1.125;
-    font-weight: 600;
-    @include line-height(1.125);
-    @include margin(0.5, 0, 0.5, 0);
-
-    &-link {
-      color: $color-base;
-
-      &:hover,
-      &:focus {
-        color: $color-base;
-      }
+  &__headshot {
+    &_photo {
+      display: inline-block;
+      margin-bottom: 0;
+      border-radius: 50%;
+      background-clip: padding-box;
     }
   }
 
-  &__subtitle {
-    color: $color-gray;
-    @include line-height(1);
-    @include margin-bottom(1);
+  &__name {
+    padding: 20px 0px 0px 8px;
+
+    &-link {
+      font-size: $typographic-base-font-size;
+      color: $typographic-base-font-color;
+      font-weight: normal;
+      border: 0;
+
+      &:hover,
+      &:focus {
+        color: $color-primary;
+        border-bottom: 1px solid $color-primary;
+      }
+
+      &--active {
+        color: $color-base;
+        border-bottom: 1px solid $color-base;
+      }
+    }
   }
 }
